@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020221112"
-#define public MagickPackageReleaseDate "snapshot-20221112"
+#define public MagickPackageVersionAddendum ".020221113"
+#define public MagickPackageReleaseDate "snapshot-20221113"
