@@ -219,7 +219,7 @@ extern "C" {
 #if defined(_VISUALC_) && (_MSC_VER < 1900)
 #undef snprintf
 extern MagickExport int NTsnprintf(char* str, size_t size, const char* format, ...);
-#define snprintf(str,size,format,...) NTsnprintf(str,sizeformat,__VA_ARGS__)
+#define snprintf(str,size,format,...) NTsnprintf(str,size,format,__VA_ARGS__)
 #endif
 
 /*
